force-app/main/default/objects/Product2/fields/Baseline_Cost__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Cost__c</fullName>
    <label>Shipping Baseline Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>