force-app/main/default/objects/Product2/fields/Commissionable_Type__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissionable Type</label>
    <type>Checkbox</type>
</CustomField>