force-app/main/default/objects/Product2/fields/Compatible_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Compatible_Accessories__c</fullName>
    <description>If it&apos;s hardware, which hardware SKUs is it compatible with (ie. HW, CBL, ACC, etc)</description>
    <label>Compatible Accessories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>