force-app/main/default/objects/Product2/fields/Compatible_Cables__c.field-meta.xml
<CustomField>
    <fullName>Compatible_Cables__c</fullName>
    <description>If it&apos;s hardware, which hardware SKUs is it compatible with (ie. HW, CBL, ACC, etc)</description>
    <label>Compatible Cables</label>
    <type>TextArea</type>
</CustomField>