force-app/main/default/objects/Product2/fields/Compatible_Entity__c.field-meta.xml
<CustomField>
    <fullName>Compatible_Entity__c</fullName>
    <label>Compatible Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Sensor</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>