force-app/main/default/objects/Product2/fields/Dimensions_cm3__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_cm3__c</fullName>
    <description>Dimensions of product cm3</description>
    <label>Dimensions cm3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>