force-app/main/default/objects/Product2/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <description>Firmware version updated in PLM</description>
    <label>Firmware Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>