force-app/main/default/objects/Product2/fields/HTS_Code__c.field-meta.xml
<CustomField>
    <fullName>HTS_Code__c</fullName>
    <label>HTS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>