force-app/main/default/objects/Product2/fields/Is_Shippable__c.field-meta.xml
<CustomField>
    <fullName>Is_Shippable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this product shippable to the customer?</inlineHelpText>
    <label>Is Shippable?</label>
    <type>Checkbox</type>
</CustomField>