force-app/main/default/objects/Product2/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <label>License Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>