force-app/main/default/objects/Product2/fields/New_Product_Addition__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Addition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product Addition</label>
    <referenceTo>New_Product_Addition__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>