force-app/main/default/objects/Product2/fields/Push_to_Webstore__c.field-meta.xml
<CustomField>
    <fullName>Push_to_Webstore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push to Webstore</label>
    <type>Checkbox</type>
</CustomField>