force-app/main/default/objects/Product2/fields/Readable_Name__c.field-meta.xml
<CustomField>
    <fullName>Readable_Name__c</fullName>
    <label>Readable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>