force-app/main/default/objects/Product2/fields/Renewal_Policy__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Policy__c</fullName>
    <description>Outlines the renewal policy set by product. Available to be seen by RAEs at Renewal.</description>
    <label>Renewal Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>