force-app/main/default/objects/Product2/fields/Revenue_recognition_type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_recognition_type__c</fullName>
    <description>Category used by finance for revenue</description>
    <label>Revenue recognition type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upon Close</fullName>
            </value>
            <value>
                <fullName>Samsara Standard Direct</fullName>
            </value>
            <value>
                <fullName>Samsara 1 month install</fullName>
            </value>
            <value>
                <fullName>Samsara 6 month install</fullName>
            </value>
            <value>
                <fullName>Contract Term</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>