force-app/main/default/objects/Product2/fields/Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment__c</fullName>
    <label>Sales Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE1</fullName>
            </value>
            <value>
                <fullName>AE2</fullName>
            </value>
            <value>
                <fullName>AE3</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>