force-app/main/default/objects/Product2/fields/Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Family__c</fullName>
    <description>Used to categorize products within a Product Family</description>
    <label>Sub-Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsara Brand</fullName>
            </value>
            <value>
                <fullName>Connected Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>