force-app/main/default/objects/Product2/fields/Sub_product_Line__c.field-meta.xml
<CustomField>
    <fullName>Sub_product_Line__c</fullName>
    <label>Sub-product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>VG</fullName>
            </value>
            <value>
                <fullName>VG-LD</fullName>
            </value>
            <value>
                <fullName>VG-PS</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Wifi-Data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Engine Immobilizer</fullName>
            </value>
            <value>
                <fullName>CM1</fullName>
            </value>
            <value>
                <fullName>CM2</fullName>
            </value>
            <value>
                <fullName>CM3</fullName>
            </value>
            <value>
                <fullName>Camera Connector</fullName>
                <label>Camera Connector HD1</label>
            </value>
            <value>
                <fullName>SER</fullName>
            </value>
            <value>
                <fullName>Live Stream</fullName>
            </value>
            <value>
                <fullName>UNPOWERED</fullName>
            </value>
            <value>
                <fullName>POWERED</fullName>
            </value>
            <value>
                <fullName>POWERED PLUS</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>CRGO</fullName>
            </value>
            <value>
                <fullName>IG15</fullName>
            </value>
            <value>
                <fullName>IG41</fullName>
            </value>
            <value>
                <fullName>Industrial 4.0</fullName>
            </value>
            <value>
                <fullName>Machine Vision</fullName>
            </value>
            <value>
                <fullName>SC11</fullName>
            </value>
            <value>
                <fullName>SC21</fullName>
            </value>
            <value>
                <fullName>SC1</fullName>
            </value>
            <value>
                <fullName>SG1</fullName>
            </value>
            <value>
                <fullName>SG1x</fullName>
            </value>
            <value>
                <fullName>CLOUD STORAGE</fullName>
            </value>
            <value>
                <fullName>INSPECTIONS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>