force-app/main/default/objects/Product2/fields/Webstore_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Webstore_Sync_Error__c</fullName>
    <label>Webstore Sync Error</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>