force-app/main/default/objects/Product2/fields/Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Weight_oz__c</fullName>
    <description>Product weight in oz</description>
    <label>Weight (oz)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>