force-app/main/default/objects/Product2/listViews/Admin_Product_List.listView-meta.xml
<ListView>
    <fullName>Admin_Product_List</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>CPQ_Enabled_Product__c</columns>
    <columns>Sales_Segment__c</columns>
    <columns>Geo_Availablity__c</columns>
    <columns>Segment_Availability__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Product_ID_18_digit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>HW-AG53,AG53-TRLR-ESS-BUNDLE,AG53-TRLR-PREM-BUNDLE,AG53 PWR Reefer Bundle</value>
    </filters>
    <label>Admin Product List</label>
</ListView>