force-app/main/default/objects/Product2/listViews/All_Products_Test.listView-meta.xml
<ListView>
    <fullName>All_Products_Test</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>CPQ_Enabled_Product__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sales_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products Test</label>
</ListView>