force-app/main/default/objects/Product2/listViews/Bundles.listView-meta.xml
<ListView>
    <fullName>Bundles</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Bundle__c</columns>
    <columns>SBQQ__Component__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>BUNDLE</value>
    </filters>
    <label>Bundles</label>
</ListView>