force-app/main/default/objects/Product2/listViews/Propel_Products.listView-meta.xml
<ListView>
    <fullName>Propel_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Propel_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Propel Products</label>
</ListView>